--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
   </nav>
 
-  <section id="welcome-section">
+  <section id="welcome-section" style="width: 100%">
     <h1>Hey I am Mimic</h1>
     <p>a web developer</p>
   </section>
